thru four-group

--- a/style.css
+++ b/style.css
@@ -26,5 +26,15 @@ section {
 
 mjx-math{
     word-wrap: break-word !important;
-    white-space: normal!important;
+    white-space: normal !important;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td {
+    border: solid 1px;
+
 }
